2004-12-04  Zoltan Varga  <vargaz@freemail.hu>

	* image.c: Add unbox_wrapper_cache.

	* class-internals.h debug-helpers.c: Add MONO_WRAPPER_UNBOX.

	* marshal.h marshal.c (mono_marshal_get_unbox_wrapper): New wrapper
	function generator.
	
	* object.c (mono_delegate_ctor): Call unbox wrapper if neccesary.
	Fixes #70173.

	* metadata-internals.h image.c: Add MonoImage->unbox_wrapper_cache.

2004-12-01 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* process.c: (complete_path) return the path quoted

2004-11-24  Zoltan Varga  <vargaz@freemail.hu>

	* reflection.c: Allow all kinds of whitespace, not just ' ' in type
	names. Fixes #69787.

2004-11-15  Zoltan Varga  <vargaz@freemail.hu>

	* icall.c (ves_icall_type_isprimitive): Native int is a primitive type.

2004-11-15  Zoltan Varga  <vargaz@freemail.hu>

	* icall.c (ves_icall_Type_GetPropertiesByName): Add support for
	property access modifiers. Fixes #69389.

2004-11-11  Zoltan Varga  <vargaz@freemail.hu>

	* icall.c (ves_icall_Type_GetField): Support BFLAGS_IgnoreCase. Fixes
	#69365.

2004-11-09 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* icall.c: use memmove in BlockCopyInternal when the source and
	destination arrays are the same.

2004-11-04  Zoltan Varga  <vargaz@freemail.hu>

	* assembly.c (mono_assembly_names_equal): Allow a match if one of
	the cultures is false. Fixes #69090.

2004-11-02  Zoltan Varga  <vargaz@freemail.hu>

	* reflection.c: Fix some spec conformance issues with the PE file
	structures so mcs compiled apps run on the Net 2.0 beta.

2004-10-31  Zoltan Varga  <vargaz@freemail.hu>

	* icall.c (ves_icall_Type_GetPropertiesByName): Handle properties
	without accessors. Fixes #61561.

	* appdomain.c (ves_icall_System_AppDomain_createDomain): Inherit
	application base from the root domain if not set. Fixes #65641.

2004-10-25  Zoltan Varga  <vargaz@freemail.hu>

	* image.c: Avoid overwriting values in the loaded_images_hash when an
	assembly is loaded multiple times. Fixes #61152.
